--- a/app/index.html
+++ b/app/index.html
@@ -59,12 +59,92 @@
         </div>
     </div>
 </header>
+<section class="title_page" style="background-image: url(img/title.jpg)">
 
-<div class="container">
-    <div class="row">
+       <h1>Blog</h1>
 
+</section>
+
+<section class="blog_list">
+    <div class="container">
+        <div class="row">
+            <div class="col-xl-4">
+                <div class="blog_list_item">
+                    <img src="img/i_2.png" alt="">
+                    <div class="blog_list_item_inform">
+                        <a href="#">  Celtic and Intelligent Car Leasing in the driving seat as 2 year deal is announced</a>
+                        <p>Celtic Football Club is delighted to announce that it has agreed a new 2 year partnership with Intelligent Car Leasing meaning the Company will continue as the Club’s Official Car Leasing Partner until June 2020.</p>
+                        <a href="#" class="read_more">Read more...</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-xl-4">
+                <div class="blog_list_item">
+                    <img src="img/i_1.png" alt="">
+                    <div class="blog_list_item_inform">
+                        <a href="#">  My First Car – By Pierre van Hooijdonk</a>
+                        <p>I passed my test in 1987 or 1988. I took 16 or 17 lessons and was delighted to do it first time. I took all of my lessons in my home town of Steenbergen, small town in the Netherlands.</p>
+                        <a href="#" class="read_more">Read more...</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xl-4">
+                <div class="blog_list_item">
+                    <img src="img/i_3.png" alt="">
+                    <div class="blog_list_item_inform">
+                        <a href="#">  My First Car – By Paddy McCourt</a>
+                        <p>I can laugh about it now but it wasn’t funny for me at the time. I’m referring to my first driving test – I think it was in 2006 – and I was given a ‘Fail’ by the examiner for driving too slow! Honestly, can you believe that?</p>
+                        <a href="#" class="read_more">Read more...</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xl-4">
+                <div class="blog_list_item">
+                    <img src="img/i_4.png" alt="">
+                    <div class="blog_list_item_inform">
+                        <a href="#">  Celtic and Intelligent Car Leasing in the driving seat as 2 year deal is announced</a>
+                        <p>Celtic Football Club is delighted to announce that it has agreed a new 2 year partnership with Intelligent Car Leasing meaning the Company will continue as the Club’s Official Car Leasing Partner until June 2020.</p>
+                        <a href="#" class="read_more">Read more...</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-xl-4">
+                <div class="blog_list_item">
+                    <img src="img/i_5.png" alt="">
+                    <div class="blog_list_item_inform">
+                        <a href="#">  My First Car – By Pierre van Hooijdonk</a>
+                        <p>I passed my test in 1987 or 1988. I took 16 or 17 lessons and was delighted to do it first time. I took all of my lessons in my home town of Steenbergen, small town in the Netherlands.</p>
+                        <a href="#" class="read_more">Read more...</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xl-4">
+                <div class="blog_list_item">
+                    <img src="img/i_6.png" alt="">
+                    <div class="blog_list_item_inform">
+                        <a href="#">  My First Car – By Paddy McCourt</a>
+                        <p>I can laugh about it now but it wasn’t funny for me at the time. I’m referring to my first driving test – I think it was in 2006 – and I was given a ‘Fail’ by the examiner for driving too slow! Honestly, can you believe that?</p>
+                        <a href="#" class="read_more">Read more...</a>
+                    </div>
+                </div>
+            </div>
+
+
+        </div>
+        <nav class="navigation pagination" role="navigation">
+            <div class="nav-links">
+                <span class="page-numbers current">1</span>
+                <a class="page-numbers" href="#">2</a>
+                <a class="page-numbers" href="#">3</a>
+                <a class="page-numbers" href="#">4</a>
+                <a class="page-numbers" href="#">5</a>
+            </div>
+        </nav>
     </div>
-</div>
+</section>
+
 
 
 
